--- a/package.json
+++ b/package.json
@@ -1,7 +1,43 @@
 {
-  "name": "hardhat-project",
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "hardhat": "^2.12.7"
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "@tsconfig/node10": "^1.0.8",
+    "@typechain/ethers-v5": "^2.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/ethereumjs-abi": "^0.6.3",
+    "@types/jest": "^27.4.1",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.0.3",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.2",
+    "erc721a": "^4.1.0",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.5",
+    "hardhat": "^2.9.3",
+    "hardhat-exposed": "^0.2.3",
+    "hardhat-typechain": "^0.3.5",
+    "ts-generator": "^0.1.1",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
+    "typechain": "^3.0.0",
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.171.0",
+    "@imtbl/imx-contracts": "^1.0.1",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@typechain/hardhat": "^6.0.0",
+    "js-sha3": "^0.5.7",
+    "merkletreejs": "^0.2.27",
+    "node-fetch": "^3.2.10",
+    "solidity-docgen": "^0.5.16",
+    "web3": "^1.6.1"
   }
 }
