--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@aws-sdk/client-s3": "^3.171.0",
     "@imtbl/imx-contracts": "^1.0.1",
     "@openzeppelin/contracts": "^4.6.0",
+    "@remix-project/remixd": "^0.6.12",
     "@typechain/hardhat": "^6.0.0",
     "js-sha3": "^0.5.7",
     "merkletreejs": "^0.2.27",
