--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@remix-project/remixd": "^0.6.12",
     "@typechain/hardhat": "^6.0.0",
+    "axios": "^1.3.4",
     "js-sha3": "^0.5.7",
     "merkletreejs": "^0.2.27",
     "node-fetch": "^3.2.10",
