--- a/foundry.toml
+++ b/foundry.toml
@@ -4,5 +4,5 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test/foundry'
 cache_path  = 'forge-cache'
-
+gas_reports = ["BetsContract"]
 # See more config options https://book.getfoundry.sh/reference/config.html
