--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
     "hardhat-exposed": "^0.2.3",
+    "hardhat-gas-reporter": "^1.0.9",
     "hardhat-typechain": "^0.3.5",
     "ts-generator": "^0.1.1",
     "ts-jest": "^27.1.2",
